# biotsavart_vector_potential

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  biotsavart.f90  equalize_coils_segments.f90  test_biotsavart.f90  test_util.f90  test_util.mod
test/: CMakeLists.txt  test_biotsavart.f90  test_equalize_coils_segments.f90
